# aoc-2022

./: .gitignore  pyproject.toml
day-001/: one.py  two.py
day-002/: one.py  two.py
